--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">PADs</string>
+    <string name="appName">PADs</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="helloBlankFragment">Hello blank fragment</string>
+    <string name="tableView">Table</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
